--- a/Lesson5/index.html
+++ b/Lesson5/index.html
@@ -13,6 +13,6 @@
         <h1 class="Saturn">Saturn Electonics
             <h2 class="Slogan">Cosmic Games!</h5>
             </h1>
-    </div>!
+    </div>
 </body>
 </html>
