--- a/Lesson7/index.html
+++ b/Lesson7/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="#" class="Button">One Way</a>
+    <a href="#" class="R">To Red</a>
+    <a href="#" class="G">To Green</a>
+    <a href="#" class="B">To Blue</a>
 </body>
 </html>
